fix spacing of destination card text

--- a/css/destinations.css
+++ b/css/destinations.css
@@ -39,7 +39,7 @@
 
 
 .card__item {
-    padding: 1em 0;
+    padding: 0.75em 0;
     margin: 1em 0;
 }
 
@@ -54,7 +54,8 @@
 
 .card__title {
     border-bottom: 3px solid #000;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
+    margin-bottom: 1.5em;
 }
 
 .card__item {
