--- a/css/global.css
+++ b/css/global.css
@@ -69,7 +69,7 @@ body {
 
 .card__div, 
 .card__link {
-    height: 25rem;
+    height: 22rem;
     width: 17rem;
     border: 1px solid rgba(0,0,0,0.2); 
     border-radius: 5px;
